Kubernetes +/Istio + Envoy/应用基于权重的路由.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  ...
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50      #将一定百分比的流量路由到一个或另一个服务
    - destination:
        host: reviews
        subset: v3
      weight: 50
