Kubernetes +/Istio + Envoy/设置请求超时.yaml

#先设置服务的路由定义：
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2

#对ratings服务的调用中加入两秒钟的延迟：
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s    #在对 ratings 服务的调用中加入两秒钟的延迟
    route:
    - destination:
        host: ratings
        subset: v1


#在目的为 reviews:v2 服务的请求加入一秒钟的请求超时：
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 1s
